--- a/app/index.html
+++ b/app/index.html
@@ -19,37 +19,37 @@
                     </a>
                     <a class="choice__restore" href="#">Restore</a>
                 </div>
-                <h1 class="choice__unlimite">Unlimited Access
+                <h1 class="choice__unlimite">Unlimited Access <br>
                     to All Features</h1>
                 <ul class="choice__menu">
                     <li class="choice__menu-list">
-                        <img class="choice__menu-img" src="images/1.svg" alt="">
+                        <img class="choice__menu-img choice__menu-imgdoc" src="images/2.svg" alt="">
                         <p class="choice__menu-title">Unlimited documents</p>
                     </li>
                     <li class="choice__menu-list">
-                        <img class="choice__menu-img" src="images/2.svg" alt="">
+                        <img class="choice__menu-img choice__menu-imgexp" src="images/1.svg" alt="">
                         <p class="choice__menu-title">Export to clouds</p>
                     </li>
                     <li class="choice__menu-list">
-                        <img class="choice__menu-img" src="images/3.svg" alt="">
+                        <img class="choice__menu-img choice__menu-imgtext" src="images/3.svg" alt="">
                         <p class="choice__menu-title">Text recognition (OCR)</p>
                     </li>
                 </ul>
                 <div class="choice__card">
                     <a class="choice__card-month" href="#">
+                        <h3 class="choice__card-title"> Monthly</h3>
+                        <div class="choice__card-price">$9.99
+                            <span class="choice__card-per">per month</span> </div>
+                        <div class="choice__card-day">3 DAYS FREE! </div>
+                        <div class="choice__card-money">$9.99 month</div>
+                    </a>
+                    <a class="choice__card-year" href="#">
+                        <div class="choice__card-circle">-83%</div>
                         <h3 class="choice__card-title">Annually</h3>
                         <div class="choice__card-price">$19.99
                             per year</div>
                         <div class="choice__card-day">most popular</div>
-                        <div class="choice__card-money">$1.66 month</div>
-                    </a>
-                    <a class="choice__card-year" href="#">
-                        <div class="choice__card-circle">-83%</div>
-                        <h3 class="choice__card-title">Monthly</h3>
-                        <div class="choice__card-price">$9.99
-                            per month</div>
-                        <div class="choice__card-day">3 DAYS FREE!</div>
-                        <div class="choice__card-money">$9.99 month</div>
+                        <div class="choice__card-money"> $1.66 month</div>
                     </a>
                 </div>
                 <a class="choice__button" href="#">Continue</a>
