--- a/app/index.html
+++ b/app/index.html
@@ -38,21 +38,21 @@
                 <div class="choice__card">
                     <a class="choice__card-month" href="#">
                         <h3 class="choice__card-title"> Monthly</h3>
-                        <div class="choice__card-price">$9.99
+                        <div class="choice__card-price">$9.99 <br>
                             <span class="choice__card-per">per month</span> </div>
                         <div class="choice__card-day">3 DAYS FREE! </div>
                         <div class="choice__card-money">$9.99 month</div>
                     </a>
                     <a class="choice__card-year" href="#">
-                        <div class="choice__card-circle">-83%</div>
+                        <!-- <div class="choice__card-circle">-83%</div>
                         <h3 class="choice__card-title">Annually</h3>
                         <div class="choice__card-price">$19.99
                             per year</div>
                         <div class="choice__card-day">most popular</div>
-                        <div class="choice__card-money"> $1.66 month</div>
+                        <div class="choice__card-money"> $1.66 month</div> -->
                     </a>
                 </div>
-                <a class="choice__button" href="#">Continue</a>
+                <button class="choice__button" type="submit">Continue</button>
                 <div class="choice__auto">Auto-rewable. Cancel anytime</div>
                 <div class="choice__privacy">
                     <a class="choice__privacy-use" href="#">Terms of Use</a>
