--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -44,20 +47,25 @@
                         <div class="choice__card-money">$9.99 month</div>
                     </a>
                     <a class="choice__card-year" href="#">
-                        <!-- <div class="choice__card-circle">-83%</div>
-                        <h3 class="choice__card-title">Annually</h3>
-                        <div class="choice__card-price">$19.99
-                            per year</div>
-                        <div class="choice__card-day">most popular</div>
-                        <div class="choice__card-money"> $1.66 month</div> -->
+                        <div class="choice__card-yearwrapper">
+                            <div class="choice__card-yearcircle">-83%</div>
+                            <h3 class="choice__card-yeartitle">Annually</h3>
+                            <div class="choice__card-yearprice">$19.99
+                                per year</div>
+                            <div class="choice__card-yearday">most popular</div>
+                            <div class="choice__card-yearmoney"> $1.66 month</div>
+                        </div>
                     </a>
                 </div>
-                <button class="choice__button" type="submit">Continue</button>
+                <a class="choice__but-link" href="#">
+                    <button class="choice__button" type="submit">Continue</button>
+                </a>
                 <div class="choice__auto">Auto-rewable. Cancel anytime</div>
                 <div class="choice__privacy">
-                    <a class="choice__privacy-use" href="#">Terms of Use</a>
-                    <a class="choice__privacy-policy" href="#">Privacy Policy</a>
+                    <a class="choice__privacy-link" href="#">Terms of Use</a>
+                    <a class="choice__privacy-link" href="#">Privacy Policy</a>
                 </div>
+                <div class="choice__line"></div>
             </div>
         </div>
     </section>
