--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,9 @@
                         <div class="choice__card-money">$9.99 month</div>
                     </a>
                     <a class="choice__card-year" href="#">
+                        <div class="choice__card-yearlinetop"></div>
+                        <div class="choice__card-yearlineright"></div>
+                        <div class="choice__card-yearcircle"></div>
                         <div class="choice__card-yearwrapper">
                             <div class="choice__card-yearcircle">-83%</div>
                             <h3 class="choice__card-yeartitle">Annually</h3>
