--- a/app/index.html
+++ b/app/index.html
@@ -39,26 +39,52 @@
                     </li>
                 </ul>
                 <div class="choice__card">
-                    <a class="choice__card-month" href="#">
-                        <h3 class="choice__card-title"> Monthly</h3>
-                        <div class="choice__card-price">$9.99 <br>
-                            <span class="choice__card-per">per month</span> </div>
-                        <div class="choice__card-day">3 DAYS FREE! </div>
-                        <div class="choice__card-money">$9.99 month</div>
+                    <a class="choice__card-month choice__card-month--active" href="#">
+                        <h3 class="choice__card-title choice__card-title--active"> Monthly</h3>
+                        <div class="choice__card-price choice__card-price--active">$9.99 <br>
+                            <span class="choice__card-per choice__card-per--active">per month</span> </div>
+                        <div class="choice__card-day choice__card-day--active">3 DAYS FREE! </div>
+                        <div class="choice__card-money choice__card-money--active">$9.99 month</div>
                     </a>
+                    <!-- <a class="choice__card-monthtwo" href="#">
+                        <h3 class="choice__card-titletwo"> Monthly</h3>
+                        <div class="choice__card-pricetwo">$9.99 <br>
+                            <span class="choice__card-pertwo">per month</span> </div>
+                        <div class="choice__card-daytwo">3 DAYS FREE! </div>
+                        <div class="choice__card-moneytwo">$9.99 month</div>
+                    </a> -->
+
                     <a class="choice__card-year" href="#">
                         <div class="choice__card-yearlinetop"></div>
                         <div class="choice__card-yearlineright"></div>
                         <div class="choice__card-yearcircle"></div>
                         <div class="choice__card-yearwrapper">
+                            <img class="choice__card-image" src="images/tempsnip.png" alt="">
+                            <img class="choice__card-imagetwo" src="images/34.png" alt="">
                             <div class="choice__card-yearcircle">-83%</div>
                             <h3 class="choice__card-yeartitle">Annually</h3>
-                            <div class="choice__card-yearprice">$19.99
-                                per year</div>
-                            <div class="choice__card-yearday">most popular</div>
+                            <div class="choice__card-yearprice">$19.99 <br>
+                                <span class="choice__card-per">per month</span></div>
+                            <div class="choice__card-yearday">MOST POPULAR</div>
                             <div class="choice__card-yearmoney"> $1.66 month</div>
                         </div>
                     </a>
+
+                    <!-- <a class="choice__card-yeartwo" href="#">
+                        <div class="choice__card-yearlinetoptwo"></div>
+                        <div class="choice__card-yearlinerighttwo"></div>
+                        <div class="choice__card-yearcircletwo"></div>
+                        <div class="choice__card-yearwrappertwo">
+                            <img class="choice__card-imagetwo" src="images/tempsnip.png" alt="">
+                            <img class="choice__card-imagetwotwo" src="images/34.png" alt="">
+                            <div class="choice__card-yearcircletwo">-83%</div>
+                            <h3 class="choice__card-yeartitletwo">Annually</h3>
+                            <div class="choice__card-yearpricetwo">$19.99 <br>
+                                <span class="choice__card-pertwo">per month</span></div>
+                            <div class="choice__card-yeardaytwo">MOST POPULAR</div>
+                            <div class="choice__card-yearmoneytwo"> $1.66 month</div>
+                        </div>
+                    </a> -->
                 </div>
                 <a class="choice__but-link" href="#">
                     <button class="choice__button" type="submit">Continue</button>
