--- a/app/index.html
+++ b/app/index.html
@@ -39,52 +39,22 @@
                     </li>
                 </ul>
                 <div class="choice__card">
-                    <a class="choice__card-month choice__card-month--active" href="#">
-                        <h3 class="choice__card-title choice__card-title--active"> Monthly</h3>
-                        <div class="choice__card-price choice__card-price--active">$9.99 <br>
-                            <span class="choice__card-per choice__card-per--active">per month</span> </div>
-                        <div class="choice__card-day choice__card-day--active">3 DAYS FREE! </div>
-                        <div class="choice__card-money choice__card-money--active">$9.99 month</div>
+                    <a class="choice__card-month " href="#">
+                        <h3 class="choice__card-title "> Monthly</h3>
+                        <div class="choice__card-price ">$9.99 <br>
+                            <span class="choice__card-per ">per month</span> </div>
+                        <div class="choice__card-day ">3 DAYS FREE! </div>
+                        <div class="choice__card-money ">$9.99 month</div>
                     </a>
-                    <!-- <a class="choice__card-monthtwo" href="#">
-                        <h3 class="choice__card-titletwo"> Monthly</h3>
-                        <div class="choice__card-pricetwo">$9.99 <br>
-                            <span class="choice__card-pertwo">per month</span> </div>
-                        <div class="choice__card-daytwo">3 DAYS FREE! </div>
-                        <div class="choice__card-moneytwo">$9.99 month</div>
-                    </a> -->
-
                     <a class="choice__card-year" href="#">
-                        <div class="choice__card-yearlinetop"></div>
-                        <div class="choice__card-yearlineright"></div>
-                        <div class="choice__card-yearcircle"></div>
                         <div class="choice__card-yearwrapper">
-                            <img class="choice__card-image" src="images/tempsnip.png" alt="">
-                            <img class="choice__card-imagetwo" src="images/34.png" alt="">
-                            <div class="choice__card-yearcircle">-83%</div>
                             <h3 class="choice__card-yeartitle">Annually</h3>
                             <div class="choice__card-yearprice">$19.99 <br>
                                 <span class="choice__card-per">per month</span></div>
                             <div class="choice__card-yearday">MOST POPULAR</div>
-                            <div class="choice__card-yearmoney"> $1.66 month</div>
+                            <div class="choice__card-yearmoney"> $1.66 year</div>
                         </div>
                     </a>
-
-                    <!-- <a class="choice__card-yeartwo" href="#">
-                        <div class="choice__card-yearlinetoptwo"></div>
-                        <div class="choice__card-yearlinerighttwo"></div>
-                        <div class="choice__card-yearcircletwo"></div>
-                        <div class="choice__card-yearwrappertwo">
-                            <img class="choice__card-imagetwo" src="images/tempsnip.png" alt="">
-                            <img class="choice__card-imagetwotwo" src="images/34.png" alt="">
-                            <div class="choice__card-yearcircletwo">-83%</div>
-                            <h3 class="choice__card-yeartitletwo">Annually</h3>
-                            <div class="choice__card-yearpricetwo">$19.99 <br>
-                                <span class="choice__card-pertwo">per month</span></div>
-                            <div class="choice__card-yeardaytwo">MOST POPULAR</div>
-                            <div class="choice__card-yearmoneytwo"> $1.66 month</div>
-                        </div>
-                    </a> -->
                 </div>
                 <a class="choice__but-link" href="#">
                     <button class="choice__button" type="submit">Continue</button>
@@ -96,6 +66,19 @@
                 </div>
                 <div class="choice__line"></div>
             </div>
+
+            <div class="item">
+                <svg class="svg" width="150" height="184" viewBox="5 4 133 162" xmlns="http://www.w3.org/2000/svg">
+                    <g fill="transparent">
+                        <path
+                            d="m8.73808 24.737529c0.7873221-10.74522 7.961202-14.942426 17.973879-17.171972l80.648611-0.200447c-4.20643 3.7407645-9.497544 14.049518-4.40996 22.45051 9.26832 18.963672 30.68276 8.553942 31.60464 5.14491l-0.26727 111.71829c-0.90903 10.7577-8.27489 14.77279-14.633 16.83798l-97.28615-0.33409c-5.914242-1.73234-10.983738-5.01979-14.298925-15.30118z"
+                            stroke="#495795" stroke-width="1" />
+                        <circle cx="120" cy="22" r="15" stroke-width="1" fill="red" />
+                        <text x="108" y="25.5">-83%</text>
+                    </g>
+                </svg>
+            </div>
+        </div>
         </div>
     </section>
     <script src="js/main.min.js"></script>
