--- a/app/r.html
+++ b/app/r.html
@@ -12,15 +12,17 @@
 <body>
 
 
-    <div class="wrap">
-        <div id="main">
-            <div class="edge top"></div>
-            <div class="edge left"></div>
-            <div class="corner top left"></div>
-            <div class="corner top right"></div>
-            <div class="corner bottom left"></div>
-            <div class="corner bottom right"></div>
-        </div>
+    <div class="item">
+        <svg viewBox="5 4 133 162" xmlns="http://www.w3.org/2000/svg">
+            <g fill="transparent">
+                <path
+                    d="m8.73808 24.737529c0.7873221-10.74522 7.961202-14.942426 17.973879-17.171972l80.648611-0.200447c-4.20643 3.7407645-9.497544 14.049518-4.40996 22.45051 9.26832 18.963672 30.68276 8.553942 31.60464 5.14491l-0.26727 111.71829c-0.90903 10.7577-8.27489 14.77279-14.633 16.83798l-97.28615-0.33409c-5.914242-1.73234-10.983738-5.01979-14.298925-15.30118z"
+                    stroke="#495795" stroke-width="1" />
+                <circle cx="120" cy="22" r="15" stroke-width="1" fill="red" />
+                <text x="108" y="25.5">-83%</text>
+            </g>
+        </svg>
+    </div>
     </div>
 
 </body>
