--- a/app/index.html
+++ b/app/index.html
@@ -39,12 +39,12 @@
                     </li>
                 </ul>
                 <div class="choice__card">
-                    <a class="choice__card-month " href="#">
-                        <h3 class="choice__card-title "> Monthly</h3>
-                        <div class="choice__card-price ">$9.99 <br>
-                            <span class="choice__card-per ">per month</span> </div>
-                        <div class="choice__card-day ">3 DAYS FREE! </div>
-                        <div class="choice__card-money ">$9.99 month</div>
+                    <a class="choice__card-month choice__card-month--active" href="#">
+                        <h3 class="choice__card-title choice__card-title--active"> Monthly</h3>
+                        <div class="choice__card-price choice__card-price--active">$9.99 <br>
+                            <span class="choice__card-per choice__card-per--active">per month</span> </div>
+                        <div class="choice__card-day choice__card-day--active">3 DAYS FREE! </div>
+                        <div class="choice__card-money choice__card-money--active">$9.99 month</div>
                     </a>
                     <a class="choice__card-year" href="#">
                         <div class="choice__card-yearwrapper">
